# chess-engine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Plan.md  WhitePawnSet.cpp  WhitePawnSet.h  main.cpp  makefile  utils.cpp  utils.h
apps/: CMakeLists.txt  main.cpp
include/: Bishop.h  BishopLookup.h  Board.h  King.h  KingLookup.h  Knight.h  KnightLookup.h  Move.h  Pawns.h  Piece.h  Queen.h  Rook.h  RookLookup.h  WhitePawnSet.h  utils.h
src/: Bishop.cpp  BishopLookup.cpp  Board.cpp  CMakeLists.txt  King.cpp  Knight.cpp  Move.cpp  Move.h  Pawns.cpp  Piece.cpp  Queen.cpp  Rook.cpp  RookLookup.cpp  WhitePawnSet.cpp  WhitePawnSet.h  main.cpp  utils.cpp
test/: CMakeLists.txt  test-bishops.cpp  test-board.cpp  test-king.cpp  test-knights.cpp  test-perft.cpp  test-piece.cpp  test-rooks.cpp  tests-pawns.cpp
